syntax = "proto3";

package chat;

service ChatService {
  rpc SendMessage (ChatMessage) returns (ChatResponse);
  rpc ReceiveMessage (Empty) returns (stream ChatMessage);
}

message ChatMessage {
  string user = 1;
  string message = 2;
  string room = 3;
}

message ChatResponse {
  string status = 1;
}

message Empty {}